--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,7 @@
 
 <main class="content">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <app-product></app-product>
-      </div>
-      
-    </div>
-    <div class="col-md-12">
-      <app-category></app-category>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </main>
 
