--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <h2 class="text-center">Recommended Products</h2>
     <div class="row">
-      @for (product of recommendedProducts; track product.productName) {
+      @for (product of recommendedProducts; track product.id) {
         <div class="col-md-6">
           <app-product-card [product]="product"></app-product-card>
         </div>
