--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container">
-    <a class="navbar-brand" href="#">
-      <img [src]="logoUrl" alt="logo" height="40">
+    <a class="navbar-brand d-flex align-items-center" routerLink="/">
+      <!-- Replaced existing logo text/element with img tag -->
+      <img src="https://cdn-icons-png.flaticon.com/128/15484/15484402.png" alt="App Logo" height="30" class="me-2">
+      <!-- Optional: Keep text next to logo -->
+      <!-- TestApp -->
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -18,7 +21,13 @@
           <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/product-categories" routerLinkActive="active">Product Categories</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+        </li>
+        <li class="nav-item">
+          
         </li>
       </ul>
     </div>
